--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,9 +13,10 @@ RUN apt-get update && apt-get install -y \
         libzip-dev \
         libonig-dev \
     && docker-php-ext-install pdo pdo_pgsql pgsql mbstring zip \
-    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Copiar código al contenedor
+# Copiar código Laravel al contenedor
 WORKDIR /var/www/html
 COPY . .
 
@@ -25,12 +26,12 @@ RUN composer install --no-dev --optimize-autoloader
 # Habilitar mod_rewrite de Apache
 RUN a2enmod rewrite
 
-# Dar permisos a storage y bootstrap/cache
+# Dar permisos correctos a storage y bootstrap/cache
 RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache \
     && chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache
 
-# Exponer puerto 8000
+# Establecer puerto 80 (Apache)
 EXPOSE 80
 
-# Comando por defecto
-CMD ["apache2-foreground"]
+# Comando final: ejecutar migraciones y levantar Apache
+CMD php artisan migrate --force && apache2-foreground
