--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,6 +26,9 @@ RUN composer install --no-dev --optimize-autoloader
 # Habilitar mod_rewrite de Apache
 RUN a2enmod rewrite
 
+# Ajustar DocumentRoot para servir /public
+RUN sed -i 's|DocumentRoot /var/www/html|DocumentRoot /var/www/html/public|g' /etc/apache2/sites-available/000-default.conf
+
 # Dar permisos correctos a storage y bootstrap/cache
 RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache \
     && chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache
