--- a/ia-diagnostico/Dockerfile
+++ b/ia-diagnostico/Dockerfile
@@ -11,8 +11,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copiar todo el código
 COPY . .
 
-# Exponer puerto de FastAPI
-EXPOSE 8000
+# Railway maneja PUERTO por variable de entorno
+ENV PORT=8000
 
-# Comando para levantar el microservicio
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Exponer puerto (opcional)
+EXPOSE ${PORT}
+
+# Comando para ejecutar usando el puerto dinámico
+CMD ["bash", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT}"]
